[package]
name = "rust_gui_review"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.13"
# Conditionally include Rayon only for native platforms (not WebAssembly)
rayon = { version = "1.7", optional = true }

[features]
default = ["native"]
native = ["rayon"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.7"


